# aoc-2025

./: pyproject.toml
src/: day01.py  day02.py
src/project/: __init__.py  paths.py
